Feature/table detection (#178)
* [Issue 177] Created python script to extract tables data

* [Issue 177] Created 'Table Detection' module

* [Issue 177] Added Table Detection module into pipeline

* [Issue 177] Added 'inputFile' property into Document model because 'Table Detection' module needs input file path to extract table data

* [Issue 177] Added Table Detection module into pipeline (Part II)

* [Issue 177] Minor table parser refactor

* [Issue 177] Table cells now are filled using document words that are contained in cell bounding box

* [Issue 177] Minor refactor to allow 'getElementsOfType' from a document object

* [Issue 177] Minor module refactor

* Moved the tables detection python script to an assets directory

* [Issue 177] Minor module refactor (Part II)

* [Issue 177] Removed from documents all words used to fill table cells

* [Issue 177] Allow "deep search" configuration into getElementsOfType method

* [Issue 177] "Words to Lines" refactor as previously was not taking into account that a page can initialy have elements of some diferent types

* [Issue 177] Added Paragraphs with lines into table cell contents

* [Issue 177] Configured viewer to display contents using correct font size

* [Issue 177] Table detection module: Fill cell contents calling isInBox method with 'non strict' parameter

* [Issue 177] Cosmetic changes in pdf viewer

* [Issue 177] Allow viewer to display more accurate font size & optimize document fonts array in case abbyy extractor was used

* [Issue 177] Usage of Font.Undefined instead of fake font when tesseract exporter is used

* [Issue 177] Avoid Table Detection module script crash if no table is detected

* [Issue 177] Added configuration object to Table detection module. Currently is only added page numbers where module will search for tables

* [Issue 177] Added comments into configuration parameter

* [Issue 177] Added 'flavor' (lattice or stream) into table detection module configuration

* [Issue 177] Comments rem

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -9,6 +9,7 @@
 		"out-of-page-removal",
 		"whitespace-removal",
 		"redundancy-detection",
+		["table-detection", { "pages": "all", "flavor": "lattice" }],
 		"reading-order-detection",
 		"link-detection",
 		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
