--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
 	},
 	"scripts": {
 		"test": "mocha -r ts-node/register **/*.spec.ts",
-		"build:ts": "tsc --outDir ./dist",
-		"build:ts:watch": "tsc -w --outDir ./dist",
-		"install:api": "npm install --prefix api/server",
+		"copyAssets": "copyfiles -u 2 \"./server/assets/*\" \"./dist/assets/\"",
+		"build:ts": "npm run copyAssets && tsc --outDir ./dist",
+		"build:ts:watch": "npm run copyAssets && tsc -w --outDir ./dist",
+		"install:api": "npm install --prefix  api/server",
 		"start:web": "npm run build:ts && cd demo/web-viewer && npm run start",
 		"run:debug": "ts-node server/bin/index.ts",
 		"lint": "tslint --project . && tslint --project ./api/server",
@@ -54,6 +55,7 @@
 		"clone": "^2.1.2",
 		"commander": "^2.19.0",
 		"concaveman": "^1.1.1",
+		"copyfiles": "^2.1.0",
 		"csv-stringify": "^5.3.0",
 		"file-type": "^9.0.0",
 		"html-entities": "^1.2.1",
