--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"scripts": {
 		"test": "mocha -r ts-node/register **/*.spec.ts",
+		"test-with-coverage": "nyc --reporter=html --reporter=text mocha -r ts-node/register **/*.spec.ts",
 		"copyAssets": "copyfiles -u 2 \"./server/assets/*\" \"./dist/assets/\"",
 		"build:ts": "npm run copyAssets && tsc --outDir ./dist",
 		"build:ts:watch": "npm run copyAssets && tsc -w --outDir ./dist",
@@ -30,6 +31,16 @@
 		"start:front": "cd demo/web-viewer && node index.js",
 		"start": "npm run start:api & npm run start:front",
 		"format": "prettier --write --list-different '{,!(dist|demo/web-viewer/public)/**/}*.{js,md,ts,css,scss}'"
+	},
+	"nyc": {
+		"extension": [
+			".ts",
+			".tsx"
+		],
+		"exclude": [
+			"**/*.d.ts"
+		],
+		"all": true
 	},
 	"husky": {
 		"hooks": {
@@ -88,7 +99,9 @@
 		"lint-staged": "^8.2.1",
 		"mocha": "^5.2.0",
 		"node-sass": "^4.12.0",
+		"nyc": "^14.1.1",
 		"prettier": "^1.18.2",
+		"source-map-support": "^0.5.13",
 		"ts-node": "^7.0.1",
 		"typescript": "^3.5.3"
 	}
