--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
   - chown -R 1001:0 /drone/src
 
 - name: Build project
-  image: axarev/documentparser
+  image: axarev/parsr
   environment:
     LD_LIBRARY_PATH: /opt/rh/rh-nodejs8/root/usr/lib64
     NODE_ENV: development
