some changes to capture distinction between the two types

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -17,6 +17,7 @@
 		"lines-to-paragraph",
 		["page-number-detection", { "maxMarginPercentage": 15 }],
 		"heading-detection",
+		"list-detection",
 		"hierarchy-detection",
 		["regex-matcher", {
 			"queries": [
