--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"build:ts:watch": "npm run copyAssets && tsc -w --outDir ./dist",
 		"install:api": "npm install --prefix  api/server",
 		"start:web": "npm run build:ts && cd demo/web-viewer && npm run start",
+		"start:web:vue": "npm run build:ts && cd demo/vue-viewer && npm run serve",
 		"run:debug": "ts-node server/bin/index.ts",
 		"lint": "tslint --project . && tslint --project ./api/server",
 		"lint:fix": "tslint --fix --project . && tslint --fix --project ./api/server",
@@ -60,6 +61,7 @@
 		"file-type": "^9.0.0",
 		"html-entities": "^1.2.1",
 		"markdown-table": "^1.1.3",
+		"pdf-image": "^2.0.0",
 		"pino": "^5.13.2",
 		"pino-pretty": "^2.6.1",
 		"request": "^2.88.0",
