--- a/server/src/modules/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/modules/LinesToParagraphModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "lines-to-paragraph",
+    "description": "Create paragraphs from a collection of lines.",
 	"addNewline": true,
 	"alignUncertainty": 3,
 	"checkFont": false,
