--- a/server/src/modules/TableDetectionModule/defaultConfig.json
+++ b/server/src/modules/TableDetectionModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "table-detection",
+    "description": "Table extraction from the PDF file",
 	"pages": "all", 
 	"flavor": "lattice"
 }
