--- a/server/src/modules/TemplateModule/defaultConfig.json
+++ b/server/src/modules/TemplateModule/defaultConfig.json
@@ -1,3 +1,5 @@
 {
-	"yourOption": "hello world"
+    "name": "template",
+    "description": "A boilerplate template showing how a template can be made",
+	"yourOption": "the value"
 }
