--- a/server/src/modules/HeadingDetectionModule/defaultConfig.json
+++ b/server/src/modules/HeadingDetectionModule/defaultConfig.json
@@ -1,1 +1,4 @@
-{}
+{
+    "name": "heading-detection",
+    "description": "Detects the headings in a document, given that it already contains Paragraphs, Lines and Words, along with formatting (font size, weight, etc) information."
+}
