--- a/server/src/modules/NumberCorrectionModule/defaultConfig.json
+++ b/server/src/modules/NumberCorrectionModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "number-correction",
+    "description": "Perform error detection and correction on financial numbers.",
 	"fixSplitNumbers": true,
 	"maxConsecutiveSplits": 3,
 	"numberRegExp": "^([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\\.[0-9]{2})?$",
