--- a/server/src/modules/RegexMatcherModule/defaultConfig.json
+++ b/server/src/modules/RegexMatcherModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "regex-matcher",
+    "description": "Matches the text against a certain number of Regular Expressions, configurable in the configuration.",
 	"isCaseSensitive": true,
     "isGlobal": true
 }
