--- a/server/src/modules/RemoteModule/defaultConfig.json
+++ b/server/src/modules/RemoteModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "remote",
+    "description": "It exports the document as [JSON](../json-output.md), call an API with it and expect a modified JSON back.",
 	"url": "localhost",
 	"granularity": "word"
 }
