--- a/server/src/modules/WhitespaceRemovalModule/defaultConfig.json
+++ b/server/src/modules/WhitespaceRemovalModule/defaultConfig.json
@@ -1,3 +1,5 @@
 {
+    "name": "whitespace-removal",
+    "description": "Removes textual elements containing only whitespace as content.",
 	"minWidth": 0
 }
