--- a/server/src/modules/WordsToLineModule/defaultConfig.json
+++ b/server/src/modules/WordsToLineModule/defaultConfig.json
@@ -1,4 +1,6 @@
 {
+    "name": "words-to-line",
+    "description": "Create lines from a bunch of words, according to the reading order.",
 	"lineHeightUncertainty": 1.2, 
 	"topUncertainty": 0.4, 
 	"maximumSpaceBetweenWords": 100, 
