force update in yum

--- a/docker/parsr/Dockerfile
+++ b/docker/parsr/Dockerfile
@@ -52,7 +52,7 @@ RUN yum -y update && \
 
 RUN yum-config-manager --add-repo https://download.opensuse.org/repositories/home:/Alexander_Pozdnyakov/CentOS_7/ && \
     rpm --import https://build.opensuse.org/projects/home:Alexander_Pozdnyakov/public_key && \
-    yum update && \
+    yum -y update && \
     yum -y install tesseract tesseract-langpack-*
 
 COPY --from=builder /opt/app-root/bin /opt/app-root/bin
