--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -18,19 +18,25 @@
 		["page-number-detection", { "maxMarginPercentage": 15 }],
 		"heading-detection",
 		"hierarchy-detection",
-		["regex-matcher", {
-			"queries": [
-				{
-					"label": "Car",
-					"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
-				}, {
-					"label": "Age",
-					"regex": "(\\d+)[ -]*(ans|jarige)"
-				}, {
-					"label": "Percent",
-					"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
-				}]
-		}]
+		[
+			"regex-matcher",
+			{
+				"queries": [
+					{
+						"label": "Car",
+						"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
+					},
+					{
+						"label": "Age",
+						"regex": "(\\d+)[ -]*(ans|jarige)"
+					},
+					{
+						"label": "Percent",
+						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+					}
+				]
+			}
+		]
 	],
 	"output": {
 		"granularity": "word",
