--- a/server/remoteModuleConfig.json
+++ b/server/remoteModuleConfig.json
@@ -13,25 +13,34 @@
 		"link-detection",
 		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
 		"lines-to-paragraph",
-		["remote", {
-			"url": "http://localhost:8888"
-		}],
+		[
+			"remote",
+			{
+				"url": "http://localhost:8888"
+			}
+		],
 		"heading-detection",
 		["header-footer-detection", { "maxMarginPercentage": 15 }],
 		"hierarchy-detection",
-		["regex-matcher", {
-			"queries": [
-				{
-					"label": "Car",
-					"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
-				}, {
-					"label": "Age",
-					"regex": "(\\d+)[ -]*(ans|jarige)"
-				}, {
-					"label": "Percent",
-					"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
-				}]
-		}]
+		[
+			"regex-matcher",
+			{
+				"queries": [
+					{
+						"label": "Car",
+						"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
+					},
+					{
+						"label": "Age",
+						"regex": "(\\d+)[ -]*(ans|jarige)"
+					},
+					{
+						"label": "Percent",
+						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+					}
+				]
+			}
+		]
 	],
 	"output": {
 		"granularity": "word",
