--- a/server/src/modules/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/modules/LinesToParagraphModule/defaultConfig.json
@@ -4,6 +4,6 @@
 	"addNewline": true,
 	"alignUncertainty": 3,
 	"checkFont": false,
-	"maxInterline": 0.3,
+	"maxInterlineToleranceFactor": 1.3,
 	"lineLengthUncertainty": 0.25
 }
