--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
 		"build:ts:watch": "npm run copyAssets && tsc -w --outDir ./dist",
 		"install:api": "npm install --prefix  api/server",
 		"start:web": "npm run build:ts && cd demo/web-viewer && npm run start",
-		"start:web:vue": "npm run build:ts && cd demo/vue-viewer && npm run serve",
+		"start:web:vue": "npm run start:api:background && cd demo/vue-viewer && npm install && npm run serve",
 		"run:debug": "ts-node server/bin/index.ts",
 		"lint": "tslint --project . && tslint --project ./api/server",
 		"lint:fix": "tslint --fix --project . && tslint --fix --project ./api/server",
-		"start:api": "npm run build:ts && npm run --prefix api/server start",
+		"start:api": "npm run build:ts && npm run install:api && npm run --prefix api/server start",
+		"start:api:background": "npm run start:api&",
 		"start:front": "cd demo/web-viewer && node index.js",
 		"start": "npm run start:api & npm run start:front",
 		"format": "prettier --write --list-different '{,!(dist|demo/web-viewer/public)/**/}*.{js,md,ts,css,scss}'"
