Add Google Vision Extractor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,8 @@
 				"-p"
 			],
 			"env": {
-				"NODE_DEBUG": "pipeline"
+				"NODE_DEBUG": "pipeline",
+				"GOOGLE_APPLICATION_CREDENTIALS": "${workspaceRoot}/***.json"
 			},
 			"outputCapture": "std"
 		}
