--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		}
 	},
 	"dependencies": {
+		"@google-cloud/vision": "^1.3.0",
 		"an-array-of-english-words": "^1.3.1",
 		"axios": "^0.19.0",
 		"clone": "^2.1.2",
@@ -76,6 +77,7 @@
 		"@types/commander": "^2.12.2",
 		"@types/concaveman": "^1.1.3",
 		"@types/file-type": "^10.9.1",
+		"@types/gapi.client.vision": "^1.0.1",
 		"@types/html-entities": "^1.2.16",
 		"@types/mocha": "^5.2.7",
 		"@types/node": "^10.14.16",
