updated to include mins and maxs for each param

--- a/server/src/processing/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/processing/LinesToParagraphModule/defaultConfig.json
@@ -2,8 +2,28 @@
 	"name": "lines-to-paragraph",
 	"description": "Create paragraphs from a collection of lines.",
 	"addNewline": true,
-	"alignUncertainty": 3,
-	"checkFont": false,
-	"maxInterline": 0.3,
-	"lineLengthUncertainty": 0.25
+	"alignUncertainty": {
+		"value": 3,
+		"range": {
+			"min": 0,
+			"max": 100
+		}
+	},
+	"checkFont": {
+		"value": false
+	},
+	"maxInterline": {
+		"value": 0.3,
+		"range": {
+			"min": 0.0,
+			"max": 1.0
+		}
+	},
+	"lineLengthUncertainty": {
+		"value": 0.25,
+		"range": {
+			"min": 0.0,
+			"max": 1.0
+		}
+	}
 }
