--- a/server/src/processing/TableDetectionModule/defaultConfig.json
+++ b/server/src/processing/TableDetectionModule/defaultConfig.json
@@ -1,6 +1,11 @@
 {
 	"name": "table-detection",
 	"description": "Table extraction from the PDF file",
-	"pages": "all",
-	"flavor": "lattice"
+	"pages": {
+		"value": []
+	},
+	"flavor": {
+		"value": "lattice",
+		"range": ["lattice", "stream"]
+	}
 }
