--- a/server/src/processing/WhitespaceRemovalModule/defaultConfig.json
+++ b/server/src/processing/WhitespaceRemovalModule/defaultConfig.json
@@ -1,5 +1,9 @@
 {
 	"name": "whitespace-removal",
 	"description": "Removes textual elements containing only whitespace as content.",
-	"minWidth": 0
+	"minWidth": {
+		"value": 0,
+		"min": 0,
+		"max": 100
+	}
 }
