--- a/server/configKeyValueSearch.json
+++ b/server/configKeyValueSearch.json
@@ -9,13 +9,13 @@
 		"out-of-page-removal",
 		"whitespace-removal",
 		"redundancy-detection",
-		["table-detection", { "pages": "all", "flavor": "lattice" }],
-		["header-footer-detection", { "maxMarginPercentage": 15 }],
-		["reading-order-detection", { "minColumnWidthInPagePercent": 15 }],
+		"table-detection",
+		["header-footer-detection", { "maxMarginPercentage": { "value": 15 } }],
+		["reading-order-detection", { "minColumnWidthInPagePercent": { "value": 15 } }],
 		"link-detection",
-		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
+		["words-to-line", { "maximumSpaceBetweenWords": { "value": 100 } }],
 		"lines-to-paragraph",
-		["page-number-detection", { "maxMarginPercentage": 15 }],
+		["page-number-detection", { "maxMarginPercentage": { "value": 15 } }],
 		"heading-detection",
 		"hierarchy-detection",
 		[
@@ -97,20 +97,22 @@
 		[
 			"regex-matcher",
 			{
-				"queries": [
-					{
-						"label": "Car",
-						"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
-					},
-					{
-						"label": "Age",
-						"regex": "(\\d+)[ -]*(ans|jarige)"
-					},
-					{
-						"label": "Percent",
-						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
-					}
-				]
+				"queries": {
+					"value": [
+						{
+							"label": "Car",
+							"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
+						},
+						{
+							"label": "Age",
+							"regex": "(\\d+)[ -]*(ans|jarige)"
+						},
+						{
+							"label": "Percent",
+							"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+						}
+					]
+				}
 			}
 		]
 	],
