--- a/server/src/processing/KeyValueDetectionModule/defaultConfig.json
+++ b/server/src/processing/KeyValueDetectionModule/defaultConfig.json
@@ -1,6 +1,15 @@
 {
 	"name": "key-value-detection",
 	"description": "Detect pairs of key-value throughout each page of a document, depending on a certain number of key-value patterns passed onto the pipeline in the configuration.",
-	"keyPatterns": {},
-	"threshold": 0.2
+	"keyPatterns": {
+		"value": {}
+	},
+	"keyValueDividerChars": [":", ";"],
+	"threshold": {
+		"value": 0.2,
+		"range": {
+			"min": 0.0,
+			"max": 1.0
+		}
+	}
 }
