--- a/server/src/processing/NumberCorrectionModule/defaultConfig.json
+++ b/server/src/processing/NumberCorrectionModule/defaultConfig.json
@@ -1,8 +1,20 @@
 {
 	"name": "number-correction",
 	"description": "Perform error detection and correction on financial numbers.",
-	"fixSplitNumbers": true,
-	"maxConsecutiveSplits": 3,
-	"numberRegExp": "^([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\\.[0-9]{2})?$",
-	"whitelist": []
+	"fixSplitNumbers": {
+		"value": true
+	},
+	"maxConsecutiveSplits": {
+		"value": 3,
+		"range": {
+			"min": 0,
+			"max": 100
+		}
+	},
+	"numberRegExp": {
+		"value": "^([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\\.[0-9]{2})?$"
+	},
+	"whitelist": {
+		"value": []
+	}
 }
