--- a/server/src/processing/PageNumberDetectionModule/defaultConfig.json
+++ b/server/src/processing/PageNumberDetectionModule/defaultConfig.json
@@ -1,6 +1,14 @@
 {
 	"name": "page-number-detection",
 	"description": "Detects the page number for each page in a document",
-	"ignorePages": [],
-	"maxMarginPercentage": 30
+	"ignorePages": {
+		"value": []
+	},
+	"maxMarginPercentage": {
+		"value": 30,
+		"range": {
+			"min": 0,
+			"max": 100
+		}
+	}
 }
