--- a/server/src/processing/RegexMatcherModule/defaultConfig.json
+++ b/server/src/processing/RegexMatcherModule/defaultConfig.json
@@ -1,6 +1,11 @@
 {
 	"name": "regex-matcher",
 	"description": "Matches the text against a certain number of Regular Expressions, configurable in the configuration.",
-	"isCaseSensitive": true,
-	"isGlobal": true
+	"isCaseSensitive": {
+		"value": true
+	},
+	"isGlobal": {
+		"value": true
+	},
+	"queries": []
 }
