--- a/server/src/processing/WordsToLineModule/defaultConfig.json
+++ b/server/src/processing/WordsToLineModule/defaultConfig.json
@@ -1,8 +1,20 @@
 {
 	"name": "words-to-line",
 	"description": "Create lines from a bunch of words, according to the reading order.",
-	"lineHeightUncertainty": 1.2,
-	"topUncertainty": 0.4,
-	"maximumSpaceBetweenWords": 100,
+	"lineHeightUncertainty": {
+		"value": 1.2,
+		"min": 0.0,
+		"max": 1.0
+	},
+	"topUncertainty": {
+		"value": 0.4,
+		"min": 0.0,
+		"max": 0.1
+	},
+	"maximumSpaceBetweenWords": {
+		"value": 100,
+		"min": 0,
+		"max": 100
+	},
 	"mergeTableElements": false
 }
