Update index, add error handling

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -33,7 +33,7 @@
 		}]
 	],
 	"output": {
-		"granularity": "word",
+		"granularity": "character",
 		"includeMarginals": false,
 		"formats": {
 			"json": true,
