--- a/server/src/processing/WordsToLineModule/defaultConfig.json
+++ b/server/src/processing/WordsToLineModule/defaultConfig.json
@@ -3,18 +3,15 @@
 	"description": "Create lines from a bunch of words, according to the reading order.",
 	"lineHeightUncertainty": {
 		"value": 1.2,
-		"min": 0.0,
-		"max": 1.0
+		"range": { "min": 0.0, "max": 1.0 }
 	},
 	"topUncertainty": {
 		"value": 0.4,
-		"min": 0.0,
-		"max": 0.1
+		"range": { "min": 0.0, "max": 1.0 }
 	},
 	"maximumSpaceBetweenWords": {
 		"value": 100,
-		"min": 0,
-		"max": 100
+		"range": { "min": 0, "max": 100 }
 	},
 	"mergeTableElements": false
 }
