--- a/api/server/package.json
+++ b/api/server/package.json
@@ -2,6 +2,9 @@
 	"name": "parsr-api",
 	"version": "1.0.0",
 	"description": "API for Parsr",
+	"author": "AXA Group Operations S.A.",
+	"license": "Apache-2.0",
+	"private": true,
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"typings": "dist/index.d.ts",
@@ -11,8 +14,10 @@
 		"start": "npm run build && node ./dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Sacha Bron",
-	"license": "ISC",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/username/repository.git"
+	},
 	"dependencies": {
 		"@types/multer": "^1.3.7",
 		"commander": "^2.19.0",
