--- a/demo/vue-viewer/package.json
+++ b/demo/vue-viewer/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "vue-viewer",
 	"version": "0.1.0",
+	"author": "AXA Group Operations S.A.",
+	"license": "Apache-2.0",
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
@@ -11,24 +13,24 @@
 		"axios": "^0.19.0",
 		"core-js": "^2.6.5",
 		"vue": "^2.6.10",
-		"vue-router": "^3.0.3",
-		"vuetify": "^2.0.5",
+		"vue-router": "^3.1.3",
+		"vuetify": "^2.0.17",
 		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.10.2",
-		"@mdi/font": "^4.3.95",
-		"@mdi/js": "^4.3.95",
-		"@vue/cli-plugin-babel": "^3.9.0",
-		"@vue/cli-plugin-eslint": "^3.9.0",
-		"@vue/cli-service": "^3.9.0",
+		"@mdi/font": "^4.4.95",
+		"@mdi/js": "^4.4.95",
+		"@vue/cli-plugin-babel": "^3.11.0",
+		"@vue/cli-plugin-eslint": "^3.11.0",
+		"@vue/cli-service": "^3.11.0",
 		"@vue/eslint-config-prettier": "^4.0.1",
-		"babel-eslint": "^10.0.1",
+		"babel-eslint": "^10.0.3",
 		"eslint": "^5.16.0",
 		"eslint-plugin-vue": "^5.0.0",
 		"material-design-icons-iconfont": "^5.0.1",
-		"sass": "^1.17.4",
-		"sass-loader": "^7.1.0",
+		"sass": "^1.22.12",
+		"sass-loader": "^7.3.1",
 		"vue-cli-plugin-vuetify": "^0.6.3",
 		"vue-template-compiler": "^2.6.10",
 		"vuetify-loader": "^1.2.2"
