--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
 	"name": "parsr",
 	"version": "1.0.0",
 	"description": "Turn your documents into data!",
+	"author": "AXA Group Operations S.A.",
+	"license": "Apache-2.0",
 	"main": "dist/bin/index.js",
 	"repository": {
 		"type": "git",
 		"url": "git+ssh://git@github.com/axa-group/Parsr.git"
 	},
-	"author": "AXA rev",
-	"license": "Apache-2.0",
 	"bugs": {
 		"url": "https://github.com/axa-group/Parsr/issues"
 	},
@@ -85,12 +85,9 @@
 		"xml2js": "^0.4.19"
 	},
 	"devDependencies": {
-		"@types/axios": "^0.14.0",
 		"@types/chai": "^4.2.0",
 		"@types/clone": "^0.1.30",
-		"@types/commander": "^2.12.2",
 		"@types/concaveman": "^1.1.3",
-		"@types/file-type": "^10.9.1",
 		"@types/gapi.client.vision": "^1.0.1",
 		"@types/html-entities": "^1.2.16",
 		"@types/mocha": "^5.2.7",
