--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,40 @@
 ---
 kind: pipeline
-name: default
+name: baseimage
 
 platform:
   os: linux
   arch: amd64
+
+trigger:
+  branch:
+  - master
+  - develop
+
+steps:
+- name: Build Docker baseimage
+  image: plugins/docker
+  settings:
+    repo: axarev/parsr-base
+    context: .
+    dockerfile: docker/parsr-base/Dockerfile
+    username: 
+      from_secret: registry_user
+    password: 
+      from_secret: registry_password
+
+---
+kind: pipeline
+name: API
+
+platform:
+  os: linux
+  arch: amd64
+
+trigger:
+  branch:
+  - master
+  - develop
 
 steps:
 - name: Change file ownership
@@ -12,37 +42,24 @@ steps:
   commands:
   - chown -R 1001:0 /drone/src
 
-- name: Build project
-  image: axarev/parsr
+- name: Build API
+  image: axarev/parsr-base
   environment:
-    LD_LIBRARY_PATH: /opt/rh/rh-nodejs8/root/usr/lib64
     NODE_ENV: development
   commands:
-  - export PATH=/opt/rh/rh-nodejs8/root/usr/bin:$PATH
-  - npm install
+  - docker/parsr/build.sh
 
-- name: Run formatter
-  image: axarev/parsr
-  environment:
-    LD_LIBRARY_PATH: /opt/rh/rh-nodejs8/root/usr/lib64
+- name: Tests
+  image: axarev/parsr-base
   commands:
-  - export PATH=/opt/rh/rh-nodejs8/root/usr/bin:$PATH
-  - npm run format
-
-- name: Run linter
-  image: node:8
-  commands:
-  - npm run lint
-
-- name: Run tests
-  image: axarev/parsr
-  environment:
-    LD_LIBRARY_PATH: /opt/rh/rh-nodejs8/root/usr/lib64
-  commands:
-  - export PATH=/opt/rh/rh-nodejs8/root/usr/bin:$PATH
   - npm run test
 
-- name: Build Docker image
+- name: Docker tag
+  image: busybox
+  commands:
+  - sh docker/tags.sh
+
+- name: Build Docker API image
   image: plugins/docker
   settings:
     repo: axarev/parsr
@@ -54,11 +71,32 @@ steps:
       from_secret: registry_password
     build_args:
       DEV_MODE: 'true'
-  when:
-    branch:
-    - develop
-    - feature/drone*
-    event:
-      exclude:
-      - pull_request
 
+depends_on:
+  - baseimage
+
+---
+kind: pipeline
+name: UI
+
+platform:
+  os: linux
+  arch: amd64
+
+trigger:
+  branch:
+  - master
+  - develop
+
+steps:
+- name: Change file ownership
+  image: alpine:latest
+  commands:
+  - chown -R 1001:0 /drone/src
+
+- name: Build UI
+  image: registry.access.redhat.com/ubi8/nodejs-10
+  environment:
+    NODE_ENV: development
+  commands:
+  - docker/parsr-ui/build.sh
