--- a/server/src/processing/RedundancyDetectionModule/defaultConfig.json
+++ b/server/src/processing/RedundancyDetectionModule/defaultConfig.json
@@ -1,10 +1,10 @@
 {
 	"name": "redundancy-detection",
 	"description": "Detects and remove duplicate textual elements on each page of the document.",
-	"percentageOfRedondancy": {
+	"minOverlap": {
 		"value": 0.5,
 		"range": {
-			"min": 0.0,
+			"min": 0.1,
 			"max": 1.0
 		}
 	},
