Fix permission problem in Openshift if no PVC are used. Also fix an issue that prevent parsr code to be updated in the docker image.

--- a/docker/parsr/Dockerfile
+++ b/docker/parsr/Dockerfile
@@ -4,5 +4,7 @@ ENV NODE_ENV development
 
 EXPOSE 3001
 
+COPY --chown=1001:0 . /opt/app-root/src
+
 RUN docker/parsr/build.sh
 CMD docker/parsr/run.sh
