--- a/server/src/processing/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/processing/LinesToParagraphModule/defaultConfig.json
@@ -1,30 +1,4 @@
 {
 	"name": "lines-to-paragraph",
-	"description": "Create paragraphs from a collection of lines.",
-	"addNewline": { "value": true, "range": [true, false] },
-	"alignUncertainty": {
-		"value": 3,
-		"range": {
-			"min": 0,
-			"max": 100
-		}
-	},
-	"checkFont": {
-		"value": false,
-		"range": [true, false]
-	},
-	"maxInterline": {
-		"value": 0.3,
-		"range": {
-			"min": 0.0,
-			"max": 1.0
-		}
-	},
-	"lineLengthUncertainty": {
-		"value": 0.25,
-		"range": {
-			"min": 0.0,
-			"max": 1.0
-		}
-	}
+	"description": "Create paragraphs from a collection of lines."
 }
