exclude pull_request events for parsr-base  and parsr-ui pipelines

--- a/.drone.yml
+++ b/.drone.yml
@@ -61,6 +61,10 @@ steps:
   image: busybox
   commands:
   - sh docker/tags.sh
+  when:
+    event:
+      exclude:
+      - pull_request
 
 - name: Build Docker API image
   image: plugins/docker
@@ -74,6 +78,10 @@ steps:
       from_secret: registry_password
     build_args:
       DEV_MODE: 'true'
+  when:
+    event:
+      exclude:
+      - pull_request
 
 depends_on:
   - baseimage
@@ -90,6 +98,9 @@ trigger:
   branch:
   - master
   - develop
+  event:
+    exclude:
+    - pull_request
 
 steps:
 - name: Docker tag
