--- a/.drone.yml
+++ b/.drone.yml
@@ -100,6 +100,11 @@ trigger:
   - develop
 
 steps:
+- name: Change file ownership
+  image: alpine:latest
+  commands:
+  - chown -R 1001:0 /drone/src
+
 - name: Build UI
   image: registry.access.redhat.com/ubi8/nodejs-10
   environment:
