--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,9 @@ trigger:
   branch:
   - master
   - develop
+  event:
+    exclude:
+    - pull_request
 
 steps:
 - name: Build Docker baseimage
@@ -22,10 +25,6 @@ steps:
       from_secret: registry_user
     password: 
       from_secret: registry_password
-  when:
-    event:
-      exclude:
-      - pull_request
 
 ---
 kind: pipeline
@@ -112,3 +111,29 @@ steps:
     NODE_ENV: development
   commands:
   - docker/parsr-ui/build.sh
+
+- name: Docker tag
+  image: busybox
+  commands:
+  - sh docker/tags.sh
+  when:
+    event:
+      exclude:
+      - pull_request
+
+- name: Build UI Docker image
+  image: plugins/docker
+  settings:
+    repo: axarev/parsr-ui-localhost
+    context: .
+    dockerfile: docker/parsr-ui/Dockerfile
+    username: 
+      from_secret: registry_user
+    password: 
+      from_secret: registry_password
+    build_args:
+      VUE_APP_API: http://localhost:3001
+  when:
+    event:
+      exclude:
+      - pull_request
