--- a/server/src/processing/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/processing/LinesToParagraphModule/defaultConfig.json
@@ -1,4 +1,11 @@
 {
 	"name": "lines-to-paragraph",
-	"description": "Create paragraphs from a collection of lines."
+	"description": "Create paragraphs from a collection of lines.",
+	"tolerance": {
+		"value": 0.25,
+		"range": {
+			"min": 0.1,
+			"max": 1.0
+		}
+	}
 }
