--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"files": ["server/bin/index.ts"],
 	"compilerOptions": {
 		"types": ["node"],
-		"lib": ["es7"],
+		"lib": ["es7", "es2019"],
 		"target": "es5",
 		"sourceMap": true,
 		"outDir": "dist",
