--- a/server/src/processing/WordsToLineModuleNew/defaultConfig.json
+++ b/server/src/processing/WordsToLineModuleNew/defaultConfig.json
@@ -4,5 +4,13 @@
 	"topUncertainty": {
 		"value": 0.4,
 		"range": { "min": 0.0, "max": 1.0 }
+	},
+	"maxAverageSpaceCount": {
+		"value": 10,
+		"range": { "min": 1, "max": 100 }
+	},
+	"maxSpacesBetweenWords": {
+		"value": 60,
+		"range": { "min": 1, "max": 100 }
 	}
 }
