[Vue-refactor] - updated interfaces and modules defaultConfig file

--- a/server/src/processing/NumberCorrectionModule/defaultConfig.json
+++ b/server/src/processing/NumberCorrectionModule/defaultConfig.json
@@ -2,7 +2,8 @@
 	"name": "number-correction",
 	"description": "Perform error detection and correction on financial numbers.",
 	"fixSplitNumbers": {
-		"value": true
+		"value": true,
+		"range": [true, false]
 	},
 	"maxConsecutiveSplits": {
 		"value": 3,
