--- a/server/src/processing/WordsToLineModule/defaultConfig.json
+++ b/server/src/processing/WordsToLineModule/defaultConfig.json
@@ -3,15 +3,18 @@
 	"description": "Create lines from a bunch of words, according to the reading order.",
 	"lineHeightUncertainty": {
 		"value": 0.2,
-		"range": { "min": 0.0, "max": 1.0 }
+		"range": { "min": 0.0, "max": 1.0, "step": 0.1 }
 	},
 	"topUncertainty": {
 		"value": 0.4,
-		"range": { "min": 0.0, "max": 1.0 }
+		"range": { "min": 0.0, "max": 1.0, "step": 0.1 }
 	},
 	"maximumSpaceBetweenWords": {
 		"value": 100,
 		"range": { "min": 0, "max": 100 }
 	},
-	"mergeTableElements": false
+	"mergeTableElements": {
+		"value": false,
+		"range": [true, false]
+	}
 }
