[DefaultConfigRefactor] - changed global config files to key-value format

--- a/server/configKeyValueSearch.json
+++ b/server/configKeyValueSearch.json
@@ -10,12 +10,12 @@
 		"whitespace-removal",
 		"redundancy-detection",
 		"table-detection",
-		["header-footer-detection", { "maxMarginPercentage": { "value": 15 } }],
-		["reading-order-detection", { "minColumnWidthInPagePercent": { "value": 15 } }],
+		["header-footer-detection", { "maxMarginPercentage": 15 }],
+		["reading-order-detection", { "minColumnWidthInPagePercent": 15 }],
 		"link-detection",
-		["words-to-line", { "maximumSpaceBetweenWords": { "value": 100 } }],
+		["words-to-line", { "maximumSpaceBetweenWords": 100 }],
 		"lines-to-paragraph",
-		["page-number-detection", { "maxMarginPercentage": { "value": 15 } }],
+		["page-number-detection", { "maxMarginPercentage": 15 }],
 		"hierarchy-detection",
 		[
 			"key-value-detection",
@@ -96,22 +96,20 @@
 		[
 			"regex-matcher",
 			{
-				"queries": {
-					"value": [
-						{
-							"label": "Car",
-							"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
-						},
-						{
-							"label": "Age",
-							"regex": "(\\d+)[ -]*(ans|jarige)"
-						},
-						{
-							"label": "Percent",
-							"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
-						}
-					]
-				}
+				"queries": [
+					{
+						"label": "Car",
+						"regex": "([A-Z]{2}\\-[\\d]{3}\\-[A-Z]{2})"
+					},
+					{
+						"label": "Age",
+						"regex": "(\\d+)[ -]*(ans|jarige)"
+					},
+					{
+						"label": "Percent",
+						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+					}
+				]
 			}
 		]
 	],
