--- a/server/src/processing/NumberCorrectionModule/defaultConfig.json
+++ b/server/src/processing/NumberCorrectionModule/defaultConfig.json
@@ -1,21 +1,23 @@
 {
 	"name": "number-correction",
 	"description": "Perform error detection and correction on financial numbers.",
-	"fixSplitNumbers": {
-		"value": true,
-		"range": [true, false]
-	},
-	"maxConsecutiveSplits": {
-		"value": 3,
-		"range": {
-			"min": 0,
-			"max": 100
+	"specs": {
+		"fixSplitNumbers": {
+			"value": true,
+			"range": [true, false]
+		},
+		"maxConsecutiveSplits": {
+			"value": 3,
+			"range": {
+				"min": 0,
+				"max": 100
+			}
+		},
+		"numberRegExp": {
+			"value": "^([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\\.[0-9]{2})?$"
+		},
+		"whitelist": {
+			"value": []
 		}
-	},
-	"numberRegExp": {
-		"value": "^([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\\.[0-9]{2})?$"
-	},
-	"whitelist": {
-		"value": []
 	}
 }
