--- a/server/src/processing/RedundancyDetectionModule/defaultConfig.json
+++ b/server/src/processing/RedundancyDetectionModule/defaultConfig.json
@@ -1,14 +1,14 @@
 {
 	"name": "redundancy-detection",
 	"description": "Detects and remove duplicate textual elements on each page of the document.",
-	"minOverlap": {
-		"value": 0.5,
-		"range": {
-			"min": 0.1,
-			"max": 1.0
+	"specs": {
+		"minOverlap": {
+			"value": 0.5,
+			"range": {
+				"min": 0.1,
+				"max": 1.0,
+				"step": 0.1
+			}
 		}
-	},
-	"minimumPages": {
-		"value": 6
 	}
 }
