--- a/server/src/processing/RegexMatcherModule/defaultConfig.json
+++ b/server/src/processing/RegexMatcherModule/defaultConfig.json
@@ -1,15 +1,17 @@
 {
 	"name": "regex-matcher",
 	"description": "Matches the text against a certain number of Regular Expressions, configurable in the configuration.",
-	"isCaseSensitive": {
-		"value": true,
-		"range": [true, false]
-	},
-	"isGlobal": {
-		"value": true,
-		"range": [true, false]
-	},
-	"queries": {
-		"value": []
+	"specs": {
+		"isCaseSensitive": {
+			"value": true,
+			"range": [true, false]
+		},
+		"isGlobal": {
+			"value": true,
+			"range": [true, false]
+		},
+		"queries": {
+			"value": []
+		}
 	}
 }
