--- a/server/src/processing/RemoteModule/defaultConfig.json
+++ b/server/src/processing/RemoteModule/defaultConfig.json
@@ -1,11 +1,13 @@
 {
 	"name": "remote",
 	"description": "It exports the document as [JSON](../json-output.md), call an API with it and expect a modified JSON back.",
-	"url": {
-		"value": "localhost"
-	},
-	"granularity": {
-		"value": "word",
-		"range": ["word", "character"]
+	"specs": {
+		"url": {
+			"value": "localhost"
+		},
+		"granularity": {
+			"value": "word",
+			"range": ["word", "character"]
+		}
 	}
 }
