--- a/server/src/processing/TableDetectionModule/defaultConfig.json
+++ b/server/src/processing/TableDetectionModule/defaultConfig.json
@@ -1,11 +1,13 @@
 {
 	"name": "table-detection",
 	"description": "Table extraction from the PDF file",
-	"pages": {
-		"value": []
-	},
-	"flavor": {
-		"value": "lattice",
-		"range": ["lattice", "stream"]
+	"specs": {
+		"pages": {
+			"value": []
+		},
+		"flavor": {
+			"value": "lattice",
+			"range": ["lattice", "stream"]
+		}
 	}
 }
