--- a/server/src/processing/LinesToParagraphModule/defaultConfig.json
+++ b/server/src/processing/LinesToParagraphModule/defaultConfig.json
@@ -13,6 +13,10 @@
 		"computeHeadings": {
 			"value": true,
 			"range": [true, false]
+		},
+		"computeLists": {
+			"value": true,
+			"range": [true, false]
 		}
 	}
 }
