--- a/api/server/package.json
+++ b/api/server/package.json
@@ -11,7 +11,7 @@
 		"start": "npm run build && node ./dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Sacha Bron",
+	"author": "AXA rev",
 	"license": "ISC",
 	"dependencies": {
 		"@types/multer": "^1.3.7",
