[Headings] Avoid run test each commit

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test && npm audit",
+      "pre-commit": "npm run lint",
       "pre-push": "npm test && npm audit"
     }
   },
