--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "string-similarity": "^1.2.1",
     "svgson": "^3.1.0",
     "tslint": "^5.19.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
