Run a spell checker on the whole project

--- a/demo/jupyter-notebook/sampleConfig.json
+++ b/demo/jupyter-notebook/sampleConfig.json
@@ -25,7 +25,7 @@
 					"regex": "(\\d+)[ -]*(ans|jarige)"
 				}, {
 					"label": "Percent",
-					"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+					"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|prozent)"
 				}]
 		}]
 	],
