--- a/server/configKeyValueSearch.json
+++ b/server/configKeyValueSearch.json
@@ -87,7 +87,7 @@
 					"Reported": ["Reported"],
 					"Title": ["Title"],
 					"Visit ID": ["VISIT ID", "Visit ID"],
-					"Visite TYPE": ["VISIT TYPE", "Visit Type"],
+					"Visit TYPE": ["VISIT TYPE", "Visit Type"],
 					"Visit No": ["Visit No"]
 				},
 				"thresholdRatio": 0.8
@@ -107,7 +107,7 @@
 					},
 					{
 						"label": "Percent",
-						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|prozent)"
 					}
 				]
 			}
