--- a/server/remoteModuleConfig.json
+++ b/server/remoteModuleConfig.json
@@ -35,7 +35,7 @@
 					},
 					{
 						"label": "Percent",
-						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|procent)"
+						"regex": "([\\-]?(\\d)+[\\.\\,]*(\\d)*)[ ]*(%|per|percent|pourcent|prozent)"
 					}
 				]
 			}
