[Patch] Make the default launch.json work out of the box
1. Create the requested output folder if it doesn't exist already,
2. added the default readme sample in the samples folder,
3. made changes to launch.json to work out of the box

--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,6 @@ typings/
 .next
 
 *dist*
-samples
 mutool-extraction
 mutool-images
 pipeline
@@ -110,3 +109,6 @@ __pycache__
 # drone
 .drone-secret*
 .tags
+
+# temporary output folder in the root - by default used for temporary output storage in launch.json
+tmp
