[Heading] Revert computeHeadings to true

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -54,7 +54,7 @@
       "lines-to-paragraph",
       {
         "tolerance": 0.25,
-        "computeHeadings": false
+        "computeHeadings": true
       }
     ],
     "list-detection",
