--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -61,6 +61,7 @@
         "computeHeadings": true
       }
     ],
+    "heading-detection",
     "list-detection",
     [
       "page-number-detection",
