[Heading] Remove computeHeading from lines to paragraph module

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -57,8 +57,7 @@
     [
       "lines-to-paragraph",
       {
-        "tolerance": 0.25,
-        "computeHeadings": true
+        "tolerance": 0.25
       }
     ],
     "heading-detection",
