[TableDetection] - modifications on UI for better TableDetectionModule configuration (some hardcoded stuff)

--- a/server/src/processing/TableDetectionModule/defaultConfig.json
+++ b/server/src/processing/TableDetectionModule/defaultConfig.json
@@ -6,7 +6,8 @@
       "value": [
         {
           "pages": [],
-          "flavor": "lattice"
+          "flavor": "lattice",
+          "table_areas": []
         }
       ]
     }
