[TableDetectionModule] - changed parameter name

--- a/server/defaultConfig.json
+++ b/server/defaultConfig.json
@@ -22,7 +22,7 @@
     [
       "table-detection",
       {
-        "pageConfig": [
+        "runConfig": [
           {
             "pages": [],
             "flavor": "lattice"
