--- a/server/src/processing/TableDetectionModule/defaultConfig.json
+++ b/server/src/processing/TableDetectionModule/defaultConfig.json
@@ -2,7 +2,7 @@
   "name": "table-detection",
   "description": "Table extraction from the PDF file",
   "specs": {
-    "pageConfig": {
+    "runConfig": {
       "value": [
         {
           "pages": [],
