--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"noImplicitThis": true,
 		"strictNullChecks": false,
 		"downlevelIteration": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"allowJs": true,
 	}
 }
